# Web-Key

./: .env  Cargo.toml  README.md  main.rs
migrations/20160607133443_create_table/: down.sql  up.sql
src/: blog.rs  lib.rs  main.rs  models.rs
src/admin/: admin_articles.rs  admin_index.rs  mod.rs
src/models/: articless.rs  dbsql.rs  mod.rs
src/web/: mod.rs  web_articles.rs  web_index.rs
views/: create_post.html  edit_post.html  index.html  post.html  posts.html
views/admin/: base.html  index.html
